# quantitative-stress-tester

./: .env.example  .gitignore  AGENTS.md  BENCHMARK.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  render.yaml
api-gateway/: Dockerfile  README.md  go.mod
api-gateway/cmd/api-gateway/: main.go
api-gateway/cmd/healthcheck/: main.go
api-gateway/internal/config/: config.go
api-gateway/internal/gateway/: market_data.go  market_data_test.go  server.go  server_test.go
compute-engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
compute-engine/app/: main.py
compute-engine/app/api/: routes.py
compute-engine/app/models/: stress.py
compute-engine/app/services/: gbm.py  stress_service.py
compute-engine/tests/: test_api.py  test_gbm.py
edge-ui/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  vitest.config.mts
edge-ui/__tests__/: portfolio.test.ts
edge-ui/app/: globals.css  layout.tsx  page.tsx
edge-ui/app/auth/callback/: route.ts
edge-ui/components/: AuthPanel.tsx  CorrelationMatrix.tsx  DistributionChart.tsx  PortfolioInput.tsx  RunHistory.tsx
edge-ui/lib/: api.ts  export.ts  portfolio.ts  types.ts
edge-ui/lib/server/: gateway.ts  persistence.ts
edge-ui/lib/supabase/: browser.ts  env.ts  server.ts
edge-ui/store/: portfolio-store.ts
scripts/: integration_smoke.py  wrk_stress_post.lua
supabase/: README.md
supabase/migrations/: 202604250001_quant_stress_engine.sql  202605010001_analytics_expansion.sql  202605220001_scenario_risk_attribution.sql
(+4 files in other folders)
